Working on paper style report of this

--- a/100-wgs-download.Rmd
+++ b/100-wgs-download.Rmd
@@ -225,7 +225,7 @@ Visualize covMat
 
 ```{r}
 meta<-m2
-m <- as.matrix(read.table("outputs/100/58-ibs-90-3.covMat"))
+m <- as.matrix(read.table("outputs/100/58-ibs-90.covMat"))
 eig <- eigen(m)
 var<-eig$values/sum(eig$values)
 cumvar<-cumsum(eig$values)/sum(eig$values)
