--- a/106-separate-clusters.Rmd
+++ b/106-separate-clusters.Rmd
@@ -67,7 +67,7 @@ bcftools view plink.vcf.gz --regions NC_066833.1  > chrom01.vcf
 bcftools +prune -l 0.20 -w 10000 plink.vcf.gz > plink-pruned.vcf.gz
 ```
 
-Not pruning, cause multi-snp haplotypes.    
+    
 
 ```{r, eval=FALSE}
 vcf<-read.vcfR(file="outputs/106/plink-pruned.vcf")
@@ -192,7 +192,7 @@ df<-df %>% bind_cols(ozpng)
 eig<-pca1$eig/sum(pca1$eig)*100
 
 df$Population<-factor(df$Pop, levels=c("AUW","AUE","PNG"))
-ggplot(df) + 
+totpc<-ggplot(df) + 
   geom_point(aes(x=Axis1, y=Axis2, fill=Population), pch=21, cex=2, alpha=0.75) +
   theme_bw() +
   xlab(paste0("PC1 ",round(eig[1],2), "%")) +
@@ -200,6 +200,7 @@ ggplot(df) +
   theme(panel.grid = element_blank()) +
   scale_fill_manual(values=cols[1:3])
 
+totpc
 ggsave("outputs/106/ozpng-pcs12.jpeg")
 
 ```
@@ -223,6 +224,9 @@ dapc<-dapc(d2, d2@pop, n.pca = 45, n.da = 1)
 ```
 
 ```{r}
+pdf("outputs/106/discriminant-function.pdf")
+scatter(dapc)
+dev.off()
 scatter(dapc)
 ```
 
@@ -238,6 +242,8 @@ tops$locus<-gsub(".\\d$","",tops$SNP)
 tops$Chrom<-gsub("_\\d+$","",tops$locus)
 tops$Site<-gsub("NC_\\d+_\\d_","",tops$locus)
 tops
+
+write_csv(tops, file="Supplemental/Supplemental Table SX AUS-NG loci.csv")
 ```
 ```{r}
 ggplot(ldf %>% arrange(-LD1) %>% mutate(Position=1:n())) +
@@ -268,15 +274,24 @@ pcadf$Pop<-gen@pop
 eig<- pca$eig
 sum<-(eig/(sum(eig)))*100
 
-ggplot(pcadf) +
-  geom_point(aes(x=Axis1, y=Axis2, fill=Pop), pch=21)+
-  scale_fill_viridis_d() +
+pcadf$Population<-pcadf$Pop
+pca<-ggplot(pcadf) +
+  geom_point(aes(x=Axis1, y=Axis2, fill=Population), pch=21, cex=2, alpha=0.75)+
   theme_bw() +
   theme(panel.grid = element_blank()) +
   xlab(paste0("PC1 ", round(sum[1],2),"%")) +
-  ylab(paste0("PC2 ", round(sum[2],2),"%"))
+  ylab(paste0("PC2 ", round(sum[2],2),"%")) +
+  ggtitle("C") +
+  theme(plot.title = element_text(size=14, face="bold")) +
+  scale_fill_manual(values=cols[1:3])
 
+
+pca
+
+ggsave("outputs/106/top-loci-pca.pdf")
 ```
+
+
 
 Looks like we can place all these clusters with the SNPS
 
@@ -319,7 +334,7 @@ save(kstat, file="outputs/106/kstat.rda")
 ```{r}
 load("outputs/106/kstat.rda")
 bic<-kstat$Kstat %>% as_tibble() %>% rename(BIC=value) %>% mutate(K=1:n())
-ggplot(bic, aes(x=K, y=BIC)) +
+bicplot<-ggplot(bic, aes(x=K, y=BIC)) +
   geom_line() +
   geom_point() +
   theme_bw() +
@@ -331,8 +346,15 @@ ggplot(bic, aes(x=K, y=BIC)) +
   theme(axis.title=element_text(size=12)) +
   scale_x_continuous(breaks=c(1,2,3,4,5,6,7,8,9,10), labels=c("1","2","3","4","5","6","7","8","9","10")) +
   theme(axis.title = element_text(size=12, face="bold")) +
-  theme(axis.text = element_text(size=10))
+  theme(axis.text = element_text(size=10)) +
+  ggtitle("C") +
+  theme(plot.title = element_text(size=14, face="bold")) 
+
+bicplot
+
+ggsave("outputs/106/bic-plot.pdf")
 ```
+
 
 
 Now, let's look assignments    
@@ -341,7 +363,7 @@ Now, let's look assignments
 dft<-as.data.frame(table(pop(gen), kstat$grp)) %>% as_tibble() %>%
   rename(Location=Var1, Assignment=Var2, Number=Freq)
 
-ggplot(dft, aes(y=Location, x=Assignment)) +
+assign<-ggplot(dft, aes(y=Location, x=Assignment)) +
   theme(axis.title.y = element_text(size = rel(2))) +
   theme(axis.title.x = element_text(size = rel(2))) +
   theme(axis.text.x = element_text(angle = 90)) +
@@ -355,6 +377,7 @@ ggplot(dft, aes(y=Location, x=Assignment)) +
   geom_text(aes(x=Assignment, y=Location, label=Number), color="white", size=3) +
   scale_size_area(limits=c(1,25), breaks=c(0,5,10,15,20,25))
 
+assign
 ```
 
 
@@ -472,7 +495,7 @@ srun -t 12:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task
 
 min maf doesn't do anything, but leaving it in
 
-	-> Number of sites retained after filtering: 12 with minInd 15
+	-> Number of sites retained after filtering: 12 with minInd 15 in bak subdir
 	-> 
 hmmm...
 
@@ -482,8 +505,8 @@ plink --ped snps-wgs-binary.ped --map snps-wgs-binary.map --recode vcf --allow-e
 ```
 
 
-```{r, eval=FALSE}
-vcfwgs<-read.vcfR(file="outputs/106/snps-wgs.vcf")
+```{r}
+vcfwgs<-read.vcfR(file="outputs/106/bak/snps-wgs.vcf")
 wgs<-vcfR2genind(vcfwgs)
 wgs@pop<-factor(wop$Region, levels=c("Northern Territory","Papua New Guinea", "Queensland"))
 wgs
@@ -541,32 +564,46 @@ ggplot(df) +
 
 ```
 
-Neat! Combined with existing samples the 12 loci separate the fish into groups.
+Neat! Combined with existing samples the 20 loci separate the fish into groups.
 
 
 ```{r}
 kstat<-find.clusters(comb, n.pca=12,n.clust=2)
 
-
+#with 20 loci
+#kstat<-find.clusters(comb, n.pca=20,n.clust=2)
 dft<-as.data.frame(table(pop(comb), kstat$grp)) %>% as_tibble() %>%
   rename(Location=Var1, Assignment=Var2, Number=Freq)
 
-ggplot(dft, aes(y=Location, x=Assignment)) +
-  theme(axis.title.y = element_text(size = rel(2))) +
-  theme(axis.title.x = element_text(size = rel(2))) +
+dft$Location<-factor(dft$Location, levels=c("AUW","AUE","Northern Territory","Queensland","PNG","Papua New Guinea"))
+assign<-ggplot(dft, aes(y=Location, x=Assignment)) +
+  theme(axis.title.y = element_text(size = rel(1))) +
+  theme(axis.title.x = element_text(size = rel(1))) +
   theme(axis.text.x = element_text(angle = 90)) +
   labs(x="\nInferred Group", y="Sampling Location\n") +
-  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
-        panel.background = element_blank(), axis.line = element_line(colour = "black")) +
   theme(text=element_text(family='Times')) +
   theme(axis.text.x= element_text(face="bold", size=10, vjust = 0.5)) +
   theme(axis.text.y= element_text(face="bold", size=10)) +
   geom_point(aes(x=Assignment, y=Location, size=Number)) +
-  geom_text(aes(x=Assignment, y=Location, label=Number), color="white", size=3) +
-  scale_size_area(limits=c(1,30), breaks=c(1,10,20,30))
+ # geom_text(aes(x=Assignment, y=Location, label=Number), color="white", size=3) +
+  scale_size_area(limits=c(1,30), breaks=c(1,10,20,30)) +
+  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
+        panel.background = element_blank(), axis.line = element_line(colour = "black")) 
+assign  
 
+ggsave("outputs/106/assignments.pdf", width=6, height=4)
 ```
 71 Individauls
+
+
+```{r}
+ggarrange(totpc+ggtitle("A") +  theme(plot.title = element_text(size=14, face="bold"), legend.position = "none") ,
+          pca+ggtitle("B"), bicplot, assign+ggtitle("D") +  theme(plot.title = element_text(size=14, face="bold")),
+                                                                  widths = c(1,1.25))
+
+ggsave("outputs/106/Figure.pdf")
+```
+
 ```{r}
 d1<-dapc(comb, kstat$grp, n.pca=12, n.da=2)
 
