Setting up Fst calc from sfs

--- a/202-pairwise-Fst.Rmd
+++ b/202-pairwise-Fst.Rmd
@@ -52,3 +52,9 @@ writeBamlist<-function(Pop, Meta) {
 ```{r}
 lapply(pops,writeBamlist, m3)
 ```
+
+then sbatch 202.1-calc-sfs.sh
+
+Then to calc pairwise fst, need pairwise list.
+
+poplists/pairwise-list.txt
