--- a/100-wgs-download.Rmd
+++ b/100-wgs-download.Rmd
@@ -395,6 +395,8 @@ downsample<-meta3 %>% filter(Filtered > 5e7 ) %>%
                                    Run,".reduced.bam" )) 
 
 write_csv(downsample$ReductionCommand %>% as_tibble(), "100.1-downsample.sh", col_names = FALSE)
+
+write_tsv(meta3 %>% filter(Coverage > 3) %>% select(Path), col_names = FALSE, file="bamlists/downsample-58.bamlist")
 ```
 
 Downsampling    
@@ -406,11 +408,50 @@ Calling GLs
 
 ```{sh, eval=FALSE}
 srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
--bam bamlists/ -r NC_066833.1 \
--minInd   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-bam bamlists/downsample-58.bamlist -r NC_066833.1 \
+-minInd 44   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
 -doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
--out outputs/100/ > outputs/302/ -beagle.out 2> outputs/302/ -beagle.err &
+-out outputs/100/44-gls-75-down > outputs/100/44-gls-75-beagle-down.out 2> outputs/100/44-gls-75-beagle-down.err &
 
-srun -p high -t 1:00:00 python $HOME/pcangsd/pcangsd.py -beagle outputs/100/ .beagle.gz -o outputs/100/ -pca -threads 10
+srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/downsample-58.bamlist -r NC_066833.1 \
+-minInd 52   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
+-out outputs/100/52-gls-90-down > outputs/100/52-gls-90-beagle-down.out 2> outputs/100/52-gls-90-beagle-down.err &
+
+
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75-down.beagle.gz -K 2 -o outputs/100/58-gls-down-K2 &
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75-down.beagle.gz -K 3 -o outputs/100/58-gls-down-K3 &
+
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90-down.beagle.gz -K 2 -o outputs/100/58-gls-down-K2-90 &
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90-down.beagle.gz -K 3 -o outputs/100/58-gls-down-K3-90 &
+
 ```
+
+Calling GLS after downsampling    
+
+Calling GLs      
+
+```{sh, eval=FALSE}
+srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/58.bamlist -r NC_066833.1 \
+-minInd 44   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
+-out outputs/100/44-gls-75 > outputs/100/44-gls-75-beagle.out 2> outputs/100/44-gls-75-beagle.err &
+
+srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/58.bamlist -r NC_066833.1 \
+-minInd 52   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
+-out outputs/100/52-gls-90 > outputs/100/52-gls-90-beagle.out 2> outputs/100/52-gls-90-beagle.err &
+
+
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75.beagle.gz -K 2 -o outputs/100/58-gls-K2 &
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75.beagle.gz -K 3 -o outputs/100/58-gls-K3
+
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90.beagle.gz -K 2 -o outputs/100/58-gls-K2-90 &
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90.beagle.gz -K 3 -o outputs/100/58-gls-K3-90
+
+```
+
 
