--- a/100-wgs-download.Rmd
+++ b/100-wgs-download.Rmd
@@ -406,6 +406,35 @@ srun -p high -t 04:00:00 --nodes=1 parallel -j 10 < 100.1-downsample.sh > output
 
 Calling GLs      
 
+
+```{sh, eval=FALSE}
+srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/58.bamlist -r NC_066833.1 \
+-minInd 44   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
+-out outputs/100/44-gls-75 > outputs/100/44-gls-75-beagle.out 2> outputs/100/44-gls-75-beagle.err &
+
+srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+-bam bamlists/58.bamlist -r NC_066833.1 \
+-minInd 52   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
+-doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
+-out outputs/100/52-gls-90 > outputs/100/52-gls-90-beagle.out 2> outputs/100/52-gls-90-beagle.err &
+
+
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75.beagle.gz -K 2 -o outputs/100/58-gls-K2 &
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75.beagle.gz -K 3 -o outputs/100/58-gls-K3 &
+
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90.beagle.gz -K 2 -o outputs/100/58-gls-K2-90 &
+srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90.beagle.gz -K 3 -o outputs/100/58-gls-K3-90 &
+
+```
+
+
+204980 GLS at 75
+194470 GLS at 90
+
+Calling GLS after downsampling    
+
 ```{sh, eval=FALSE}
 srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
 -bam bamlists/downsample-58.bamlist -r NC_066833.1 \
@@ -428,30 +457,16 @@ srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes output
 
 ```
 
-Calling GLS after downsampling    
+211146 GLS at 75 after downsampling
+200449 GLS at 90 after downsampling
 
-Calling GLs      
-
-```{sh, eval=FALSE}
-srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
--bam bamlists/58.bamlist -r NC_066833.1 \
--minInd 44   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
--doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
--out outputs/100/44-gls-75 > outputs/100/44-gls-75-beagle.out 2> outputs/100/44-gls-75-beagle.err &
-
-srun -p high -t 12:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
--bam bamlists/58.bamlist -r NC_066833.1 \
--minInd 52   -GL 1 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna -minMaf 0.05 \
--doGLF 2 -doMajorMinor 1 -doMaf 2 -SNP_pval 1e-6 -minMapQ 10 -minQ 20 \
--out outputs/100/52-gls-90 > outputs/100/52-gls-90-beagle.out 2> outputs/100/52-gls-90-beagle.err &
-
-
-srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75.beagle.gz -K 2 -o outputs/100/58-gls-K2 &
-srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/44-gls-75.beagle.gz -K 3 -o outputs/100/58-gls-K3
-
-srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90.beagle.gz -K 2 -o outputs/100/58-gls-K2-90 &
-srun -p high -t 04:00:00 --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/100/52-gls-90.beagle.gz -K 3 -o outputs/100/58-gls-K3-90
-
+```{r}
+PlotAdmix("outputs/100/58-gls-K2-90.qopt", m2)
 ```
 
-
+```{r}
+PlotAdmix("outputs/100/58-gls-down-K2-90.qopt", m2)
+```
+```{r}
+PlotAdmix("outputs/100/58-gls-down-K2-90", m2)
+```
